test/integration/bad/call_dist_no_suffix.stan
parameters {
  real x;
}
model {
  target += std_normal(x);
}